chore: add .editorconfig file, eslint, dotenv and prisma

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDirs": ["src", "tests"],
     "target": "es2021",
     "sourceMap": true,
+    "lib": ["esnext"],
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
