--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.10",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "module-alias": "^2.2.2"
